@@ -1,6 +1,6 @@
 		    Release notes for cryptmount-6.3
 
-			RW Penney, August 2024
+			RW Penney, July 2024
 
 Introduction
 ============
